chartsadded to dasboard

--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -96,17 +96,18 @@
                 </div>
             </div>
             <div class="left-section">
-                <div class="bus-usage">
-                    
+                <div class="chart bus-usage">
+                    <h4>Bus Usage</h4>
+                    <canvas id="busUsageChart"></canvas>
                 </div>
-                <div class="punctuality">
-
+                <div class="chart punctuality">
+                    <h4>Punctuality Statistics</h4>
+                    <canvas id="punctualityChart"></canvas>
                 </div>
             </div>
         </section>
     </main>
-<script
-    src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
-</script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
