tracking page added

--- a/Bus-shedule/scheduling.html
+++ b/Bus-shedule/scheduling.html
@@ -20,7 +20,7 @@
                     <li><a href="dashboard.html"><i class="fa-solid fa-square-poll-vertical"></i> Dashboard</a></li>
                     <li><a href="bus-schefulling.html"><i class="fas fa-calendar-days"></i> Bus Schedule</a></li>
                     <li><a href=""><i class="fas fa-clock"></i> Bus Tracking</a></li>
-                    <li><a href=""><i class="fas fa-bookmark"></i> Booking</a></li>
+                    <!-- <li><a href=""><i class="fas fa-bookmark"></i> Booking</a></li> -->
                     <li><a href=""><i class="fas fa-bell"></i> Notification</a></li>
                     <li><a href=""><i class="fas fa-chart-simple"></i> Report</a></li>
                 </ul>
@@ -60,7 +60,7 @@
 
                 <div class="flex">
 
-                    <div id="schedule-calendar"></div>
+                    <div id="schedule-calendar "></div>
 
                     <div class="schedule-list">
                         <table id="schedule-table">
@@ -72,7 +72,6 @@
                                     <th>Departure Time</th>
                                     <th>Arrival Time</th>
                                     <th>Driver</th>
-                                    <th>Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -111,6 +110,10 @@
                 </div>
             </div>
         </section>
+            <div id="modal2-content">
+                <div class="edit-btn"></div>
+                <div class="delete-btn"></div>
+            </div>
     </main>
 
 
