--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -16,10 +16,10 @@
             </div>
             <div class="buttom-nav">
                 <ul>
-                    <li><a href="dashboard.html"><i class="fa-solid fa-square-poll-vertical"></i> Dashboard</a></li>
-                    <li><a href="bus-schefulling.html"><i class="fas fa-calendar-days"></i> Bus Schedule</a></li>
-                    <li><a href=""><i class="fas fa-clock"></i> Bus Tracking</a></li>
-                    <li><a href=""><i class="fas fa-bookmark"></i> Booking</a></li>
+                    <li><a href="Dashboard\index.html"><i class="fa-solid fa-square-poll-vertical"></i> Dashboard</a></li>
+                    <li><a href="Bus-shedule\scheduling.html"><i class="fas fa-calendar-days"></i> Bus Schedule</a></li>
+                    <li><a href=""><i class="fas fa-clock"></i>Bus Tracking</a></li>
+                    <!-- <li><a href=""><i class="fas fa-bookmark"></i> Booking</a></li> -->
                     <li><a href=""><i class="fas fa-bell"></i> Notification</a></li>
                     <li><a href=""><i class="fas fa-chart-simple"></i> Report</a></li>
                 </ul>
