made some modification

--- a/Notification/notification.html
+++ b/Notification/notification.html
@@ -16,12 +16,11 @@
             </div>
             <div class="buttom-nav">
                 <ul>
-                    <li><a href=""><i class="fa-solid fa-square-poll-vertical"></i> Dashboard</a></li>
-                    <li><a href=""><i class="fas fa-calendar-days"></i> Bus Schedule</a></li>
-                    <li><a href=""><i class="fas fa-clock"></i> Bus Tracking</a></li>
-                    <!-- <li><a href=""><i class="fas fa-bookmark"></i> Booking</a></li> -->
-                    <li><a href=""><i class="fas fa-bell"></i> Notification</a></li>
-                    <li><a href=""><i class="fas fa-chart-simple"></i> Report</a></li>
+                    <li><a href="..\Dashboard\index.html"><i class="fa-solid fa-square-poll-vertical"></i> Dashboard</a></li>
+                    <li><a href="..\Bus-shedule\scheduling.html"><i class="fas fa-calendar-days"></i> Bus Schedule</a></li>
+                    <li><a href="..\Bus tracking\tracking.html"><i class="fas fa-clock"></i> Bus Tracking</a></li>
+                    <li class="notifications"><a href="..\Notification\notification.html"><i class="fas fa-bell"></i> Notification</a></li>
+                    <li><a href="..\Report\report.html"><i class="fas fa-chart-simple"></i> Report</a></li>
                 </ul>
                 <div class="logout">
                     <a href="">Log out <i class="fa-solid fa-arrow-right-from-bracket"></i></a>
