made some modification

--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -49,8 +49,8 @@
                 <div class="quick-action">
                     <h4>Quick Action</h4>
                     <div class="quick-action-card">
-                        <a href="../Bus Availability\availability.html"><button id="busAvailability">Bus Availability</button></a>
-                       <a href=""><button id="BookingSummary">Booking Summary</button></a>
+                        <a href="..\Bus Availability\availability.html"><button id="busAvailability">Bus Availability</button></a>
+                       <a href="..\Booking summary\summary.html"><button id="BookingSummary">Booking Summary</button></a>
                     </div>
                 </div>
                 <div class="upcoming-schedule">
